--- a/materials/08-visual/08-visual.html
+++ b/materials/08-visual/08-visual.html
@@ -55,7 +55,7 @@ https://github.com/allisonhorst/stats-illustrations
 
 ## Visual explanations
 
-&lt;img src="images/ggplot2_exploration_es.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="images/pepper-list.png" width="50%" style="display: block; margin: auto;" /&gt;
 
 .footnote[
 .small[
@@ -84,7 +84,7 @@ with [**xaringanExtra** panels](https://pkg.garrickadenbuie.com/xaringanExtra/#/
 
 ## Think beyond the visual...
 
-&lt;img src="images/beyond-visual.png" width="50%" style="display: block; margin: auto;" /&gt;
+&lt;img src="images/beyond-visual.png" width="30%" style="display: block; margin: auto;" /&gt;
 
 .footnote[
 .small[
