--- a/materials/05-feedback/penguins/penguins.html
+++ b/materials/05-feedback/penguins/penguins.html
@@ -266,7 +266,7 @@ library(palmerpenguins)</code></pre>
 <pre id="hash_output" class="shiny-text-output" style="white-space: pre-wrap;"></pre>
 <br/>
 <div>
-<iframe src="https://forms.gle/3gAxPNQLvToahatV8" width="900px" height="1000px"></iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfvAYLFXu0Gc-U9FPzWegO6i147ta30cebDWSp5Eni5GXWBgQ/viewform?embedded=true" width="900px" height="1000px"></iframe>
 <br/>
 </div>
 <script>selectText = function(node) {
@@ -412,20 +412,20 @@ learnr:::store_exercise_cache("load-package", list(setup = NULL, chunks = list(l
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "awesome-penguins", 
     question = structure("How awesome are penguins?", html = TRUE, class = c("html", 
-    "character")), answers = list(structure(list(id = "lnr_ans_a919ecb", 
+    "character")), answers = list(structure(list(id = "lnr_ans_3f2c5c8", 
         option = "Super awesome!", value = "Super awesome!", 
         label = structure("Super awesome!", html = TRUE, class = c("html", 
         "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_ecf9493", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_f0f3d1e", 
         option = "Awesome", value = "Awesome", label = structure("Awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_e55d774", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_d3e61e4", 
         option = "Meh", value = "Meh", label = structure("Meh", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_f1fc5bf", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_1b59af4", 
         option = "Not awesome", value = "Not awesome", label = structure("Not awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_a2335e8", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_8a6c65e", 
         option = "Super not awesome", value = "Super not awesome", 
         label = structure("Super not awesome", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
@@ -438,23 +438,23 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
         answer = "awesome-penguins-answer", question = "awesome-penguins"), 
     loading = structure("<strong>Loading:<\u002fstrong> \nHow awesome are penguins?\n<br/><br/><br/>", html = TRUE, class = c("html", 
     "character")), random_answer_order = FALSE, allow_retry = FALSE, 
-    seed = 529569963.2534, options = list()), class = c("learnr_radio", 
+    seed = 1382395583.85627, options = list()), class = c("learnr_radio", 
 "tutorial_question")))
 </script>
  
 <script type="application/shiny-prerendered" data-context="server">
 learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label = "penguin-colors", 
     question = structure("Penguins are which of the following colors?", html = TRUE, class = c("html", 
-    "character")), answers = list(structure(list(id = "lnr_ans_571ab5b", 
+    "character")), answers = list(structure(list(id = "lnr_ans_941a09e", 
         option = "Black", value = "Black", label = structure("Black", html = TRUE, class = c("html", 
         "character")), correct = TRUE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_ce45c0c", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_45549ad", 
         option = "White", value = "White", label = structure("White", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_45a3dea", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_a4113bb", 
         option = "Magenta", value = "Magenta", label = structure("Magenta", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
-    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_81f0fde", 
+    "tutorial_quiz_answer")), structure(list(id = "lnr_ans_502d356", 
         option = "Cyan", value = "Cyan", label = structure("Cyan", html = TRUE, class = c("html", 
         "character")), correct = FALSE, message = NULL), class = c("tutorial_question_answer", 
     "tutorial_quiz_answer"))), button_labels = list(submit = structure("Submit Answer", html = TRUE, class = c("html", 
@@ -466,7 +466,7 @@ learnr:::question_prerendered_chunk(structure(list(type = "learnr_radio", label 
         answer = "penguin-colors-answer", question = "penguin-colors"), 
     loading = structure("<strong>Loading:<\u002fstrong> \nPenguins are which of the following colors?\n<br/><br/><br/>", html = TRUE, class = c("html", 
     "character")), random_answer_order = FALSE, allow_retry = FALSE, 
-    seed = 610833378.715559, options = list()), class = c("learnr_radio", 
+    seed = 1199424648.44147, options = list()), class = c("learnr_radio", 
 "tutorial_question")))
 </script>
  
@@ -485,7 +485,7 @@ learnr:::store_exercise_cache("penguins-count", list(setup = NULL, chunks = list
 "  pass_if_equal(", "    x = as.character(.result[1,2]), ", "    y = \"124\", ", 
 "    message = \"In this dataset, the most common species of penguins on Biscoe island are Gentoo pengiuns.\"", 
 "  )", "  fail_if_equal(", "    x = as.character(.result[1,2]), ", 
-"    y = 123, ", "    message = \"Checking for 123 doesn't make sense here, change this to some other realistic check.\"", 
+"    y = \"123\", ", "    message = \"Checking for 123 doesn't make sense here, change this to some other realistic check.\"", 
 "  )", "  # add more fail_if_equal() statements...", "  # and fill in the blank below", 
 "  fail(\"Not quite! ___\")", "})"), chunk_opts = list(label = "penguins-count-check")), 
     solution = structure(c("penguins %>%", "  filter(island == \"Biscoe\") %>%", 
